@@ -26,13 +26,17 @@ package org.fl.backupFiles.directoryGroup;
 
 import static org.assertj.core.api.Assertions.*;
 
-import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 import org.fl.backupFiles.directoryGroup.core.DirectoryGroup;
 import org.fl.backupFiles.directoryGroup.core.DirectoryGroupAll;
 import org.fl.backupFiles.directoryGroup.core.DirectoryGroupSub;
+import org.fl.util.FilterCounter;
+import org.fl.util.FilterCounter.LogRecordCounter;
+import org.fl.util.file.FilesUtils;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 
@@ -47,36 +51,103 @@ class DirectoryGroupeMapTest {
 	private static DirectoryGroupMap directoryGroupmMap;
 	
 	@BeforeAll
-	static void init() {
-		Path sourcePath = Paths.get(URI.create("file:///C:/FredericPersonnel/"));
+	static void init() throws Exception {
+		Path sourcePath = FilesUtils.uriStringToAbsolutePath("file:///FredericPersonnel/");
 		directoryGroupmMap = new DirectoryGroupMap(sourcePath, sourcePath, JSON_CONF);
 	}
 	
 	@Test
-	void testDoNotGroup() {
+	void testMap() {
+		assertThat(directoryGroupmMap).isNotNull();
+	}
+	
+	@Test
+	void testNullJson() throws URISyntaxException {
 		
-		DirectoryGroup group = directoryGroupmMap.getDirectoryGroup(Paths.get("C:\\FredericPersonnel\\photos\\bidon"));
-		assertThat(group.getPath()).isEqualTo(Paths.get("C:\\FredericPersonnel\\photos"));
+		// that is just creating a map with a defaulf DirectoryGroup
+		DirectoryGroupMap groupmMap = new DirectoryGroupMap(Path.of("/"), Path.of("/"), null);
+		assertThat(groupmMap).isNotNull();
+		
+		DirectoryGroup group = groupmMap.getDirectoryGroup(FilesUtils.uriStringToAbsolutePath("file:///any/folder"));
+		assertThat(group.getPath()).isEqualTo(Path.of("/"));
+		assertThat(group.getPermanenceLevel()).isEqualTo(DirectoryGroupMap.DEFAULT_PERMANENCE_LEVEL);
+		assertThat(group.getGroupPolicy()).isEqualTo(DirectoryGroupMap.DEFAULT_GROUP_POLICY);
+	}
+	
+	@Test
+	void testAllNull() throws URISyntaxException {
+		
+		// that is just creating a map with a defaulf DirectoryGroup
+		DirectoryGroupMap groupmMap = new DirectoryGroupMap(null, null, null);
+		assertThat(groupmMap).isNotNull();
+		
+		DirectoryGroup group = groupmMap.getDirectoryGroup(FilesUtils.uriStringToAbsolutePath("file:///any/folder"));
+		assertThat(group.getPath()).isEqualTo(Path.of("/"));
+		assertThat(group.getPermanenceLevel()).isEqualTo(DirectoryGroupMap.DEFAULT_PERMANENCE_LEVEL);
+		assertThat(group.getGroupPolicy()).isEqualTo(DirectoryGroupMap.DEFAULT_GROUP_POLICY);
+	}
+	
+	@Test
+	void originalSourcePathNullShouldRaiseError() throws URISyntaxException {
+		
+		LogRecordCounter logCounterForFilesBackUpScanner = 
+				FilterCounter.getLogRecordCounter(Logger.getLogger(DirectoryGroupMap.class.getName()));
+		
+		DirectoryGroupMap groupmMap = new DirectoryGroupMap(null, Path.of("/"), JSON_CONF);
+		assertThat(groupmMap).isNotNull();
+		
+		DirectoryGroup group = groupmMap.getDirectoryGroup(FilesUtils.uriStringToAbsolutePath("file:///any/folder"));
+		assertThat(group.getPath()).isEqualTo(Path.of("/"));
+		assertThat(group.getPermanenceLevel()).isEqualTo(DirectoryGroupMap.DEFAULT_PERMANENCE_LEVEL);
+		assertThat(group.getGroupPolicy()).isEqualTo(DirectoryGroupMap.DEFAULT_GROUP_POLICY);
+		
+		assertThat(logCounterForFilesBackUpScanner.getLogRecordCount()).isEqualTo(1);
+		assertThat(logCounterForFilesBackUpScanner.getLogRecordCount(Level.SEVERE)).isEqualTo(1);
+	}
+	
+	@Test
+	void originalActualPathNullShouldRaiseError() throws URISyntaxException {
+		
+		LogRecordCounter logCounterForFilesBackUpScanner = 
+				FilterCounter.getLogRecordCounter(Logger.getLogger(DirectoryGroupMap.class.getName()));
+		
+		DirectoryGroupMap groupmMap = new DirectoryGroupMap(FilesUtils.uriStringToAbsolutePath("file:///FredericPersonnel/photos/"), null, JSON_CONF);
+		assertThat(groupmMap).isNotNull();
+		
+		DirectoryGroup group = groupmMap.getDirectoryGroup(FilesUtils.uriStringToAbsolutePath("file:///any/folder"));
+		assertThat(group.getPath()).isEqualTo(Path.of("/"));
+		assertThat(group.getPermanenceLevel()).isEqualTo(DirectoryGroupMap.DEFAULT_PERMANENCE_LEVEL);
+		assertThat(group.getGroupPolicy()).isEqualTo(DirectoryGroupMap.DEFAULT_GROUP_POLICY);
+		
+		assertThat(logCounterForFilesBackUpScanner.getLogRecordCount()).isEqualTo(1);
+		assertThat(logCounterForFilesBackUpScanner.getLogRecordCount(Level.SEVERE)).isEqualTo(1);
+	}
+	
+	@Test
+	void testDoNotGroup() throws URISyntaxException {
+		
+		DirectoryGroup group = directoryGroupmMap.getDirectoryGroup(FilesUtils.uriStringToAbsolutePath("file:///FredericPersonnel/photos/bidon"));
+		assertThat(group.getPath()).isEqualTo(FilesUtils.uriStringToAbsolutePath("file:///FredericPersonnel/photos"));
 		assertThat(group.getPermanenceLevel()).isEqualTo(DirectoryPermanenceLevel.HIGH);
 		assertThat(group.getGroupPolicy()).isEqualTo(GroupPolicy.DO_NOT_GROUP);
 		assertThat(group).isInstanceOf(DirectoryGroup.class);
 	}
 	
 	@Test
-	void testGroupSub() {
+	void testGroupSub() throws URISyntaxException {
 		
-		DirectoryGroup group = directoryGroupmMap.getDirectoryGroup(Paths.get("C:\\FredericPersonnel\\tmp\\bidon"));
-		assertThat(group.getPath()).isEqualTo(Paths.get("C:\\FredericPersonnel\\tmp"));
+		DirectoryGroup group = directoryGroupmMap.getDirectoryGroup(FilesUtils.uriStringToAbsolutePath("file:///FredericPersonnel/tmp/bidon"));
+		assertThat(group.getPath()).isEqualTo(FilesUtils.uriStringToAbsolutePath("file:///FredericPersonnel/tmp"));
 		assertThat(group.getPermanenceLevel()).isEqualTo(DirectoryPermanenceLevel.MEDIUM);
 		assertThat(group.getGroupPolicy()).isEqualTo(GroupPolicy.GROUP_SUB_ITEMS);
 		assertThat(group).isInstanceOf(DirectoryGroupSub.class);
 	}
 
 	@Test
-	void testGroupAll() {
+	void testGroupAll() throws URISyntaxException {
 		
-		DirectoryGroup group = directoryGroupmMap.getDirectoryGroup(Paths.get("C:\\FredericPersonnel\\tmp\\low\\insideMedium\\bidon"));
-		assertThat(group.getPath()).isEqualTo(Paths.get("C:\\FredericPersonnel\\tmp\\low\\insideMedium"));
+		DirectoryGroup group = directoryGroupmMap.getDirectoryGroup(FilesUtils.uriStringToAbsolutePath("file:///FredericPersonnel/tmp/low/insideMedium/bidon"));
+		assertThat(group.getPath()).isEqualTo(FilesUtils.uriStringToAbsolutePath("file:///FredericPersonnel/tmp/low/insideMedium"));
 		assertThat(group.getPermanenceLevel()).isEqualTo(DirectoryPermanenceLevel.LOW);
 		assertThat(group.getGroupPolicy()).isEqualTo(GroupPolicy.GROUP_ALL);
 		assertThat(group).isInstanceOf(DirectoryGroupAll.class);
@@ -84,19 +155,28 @@ class DirectoryGroupeMapTest {
 	}
 	
 	@Test
-	void testGroupDefault() {
+	void testGroupDefault() throws Exception {
 		
-		DirectoryGroup group = directoryGroupmMap.getDirectoryGroup(Paths.get("C:\\FredericPersonnel\\default"));
-		assertThat(group.getPath()).isEqualTo(Paths.get("/"));
+		DirectoryGroup group = directoryGroupmMap.getDirectoryGroup(FilesUtils.uriStringToAbsolutePath("file:///FredericPersonnel/default"));
+		assertThat(group.getPath()).isEqualTo(Path.of("/"));
 		assertThat(group.getPermanenceLevel()).isEqualTo(DirectoryGroupMap.DEFAULT_PERMANENCE_LEVEL);
 		assertThat(group.getGroupPolicy()).isEqualTo(DirectoryGroupMap.DEFAULT_GROUP_POLICY);	
 	}
 	
 	@Test
-	void testGroupRoot() {
+	void testGroupDefault2() throws URISyntaxException {
 		
-		DirectoryGroup group = directoryGroupmMap.getDirectoryGroup(Paths.get("C:\\FredericPersonnel\\photos"));
-		assertThat(group.getPath()).isEqualTo(Paths.get("C:\\FredericPersonnel\\photos"));
+		DirectoryGroup group = directoryGroupmMap.getDirectoryGroup(FilesUtils.uriStringToAbsolutePath("file:///any/path"));
+		assertThat(group.getPath()).isEqualTo(Path.of("/"));
+		assertThat(group.getPermanenceLevel()).isEqualTo(DirectoryGroupMap.DEFAULT_PERMANENCE_LEVEL);
+		assertThat(group.getGroupPolicy()).isEqualTo(DirectoryGroupMap.DEFAULT_GROUP_POLICY);	
+	}
+	
+	@Test
+	void testGroupRoot() throws URISyntaxException {
+		
+		DirectoryGroup group = directoryGroupmMap.getDirectoryGroup(FilesUtils.uriStringToAbsolutePath("file:///FredericPersonnel/photos"));
+		assertThat(group.getPath()).isEqualTo(FilesUtils.uriStringToAbsolutePath("file:///FredericPersonnel/photos"));
 		assertThat(group.getPermanenceLevel()).isEqualTo(DirectoryPermanenceLevel.HIGH);
 		assertThat(group.getGroupPolicy()).isEqualTo(GroupPolicy.DO_NOT_GROUP);
 		assertThat(group).isInstanceOf(DirectoryGroup.class);
